# CloMA

./: .gitignore  CloMA_env.yml  README.MD  README.md  pyproject.toml
CloMA/: __main__.py  detect_well.py  run_pipeline_interactive.py  segment_colonies.py  segment_colonies_cellpose.py  segment_colonies_threshold.py
CloMA/extras/: __init__.py  filter_border_colonies.py  preprocess.py  well_detection.py  well_detection_interactive.py
CloMA/feature_extraction/: __init__.py  extract_features.py  feature_extraction.py
CloMA/napari_plugin/: PLUGIN_GUIDE.md  QUICKSTART.md  README.md  __init__.py  _cloma_advanced_widget.py  _cloma_tab.py  _cloma_widget.py  _features_tab.py  _preprocessing_tab.py  _segmentation_tab.py  example_usage.py  examples.py  install.py  napari.yaml  pandas_model.py  test_cloma_widget.py
CloMA/preprocess/: detect_well.py  filter_border_colonies.py
CloMA/preprocess/segmentation/: segment_colonies_cellpose.py  segment_colonies_mixed.py  segment_colonies_threshold.py
CloMA/segmentation/: __init__.py  segment_colonies_cellpose.py  segment_colonies_mixed.py  segment_colonies_threshold.py  segmentation.py
docs/source/: CloMA.extras.rst  CloMA.feature_extraction.rst  CloMA.napari_plugin.rst  CloMA.rst  CloMA.segmentation.rst  conf.py  index.rst  modules.rst
well_detection/: detect_well.py  testes.ipynb  testes.py  testes_dilation.ipynb
