[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cloma"
version = "1.0.0"
description = "Clonogenic Morphology Analysis"
authors = [{name = "Frederico"}]
dependencies = [
    "napari>=0.4.18",
    "magicgui",
    "qtpy",
    "numpy",
    "pandas",
    "scipy",
    "scikit-image",
    "opencv-python",
    "matplotlib",
    "tifffile",
    "imagecodecs",
    "qtpy",
    "typer",
    "cellpose"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["CloMA*"]

[project.entry-points."napari.manifest"]
cloma = "CloMA.napari_plugin:napari.yaml"