[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cloma"
version = "1.0.0"
description = "Clonogenic Morphology Analysis"
authors = [{name = "Frederico"}]
requires-python = ">=3.8"
readme = "README.MD"
license = {text = "MIT"}
repository = "https://github.com/labsinal/CloMA"
dependencies = [
    "numpy",
    "scipy",
    "scikit-image",
    "pandas",
    "opencv-python",
    "matplotlib",
    "tifffile",
    "imagecodecs",
    "napari>=0.4.18",
    "magicgui",
    "qtpy",
    "typer"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["CloMA*"]

[project.entry-points."napari.manifest"]
cloma = "CloMA.napari_plugin:napari.yaml"